iPad site width bugfix
Media query for tables was resetting the padding which caused cards to
push site out of the screen in iPad (and possible other tablets). Also
padding: 0 was setting all content on tablets to start from pixel 0
which made it hard to read. I removed the media query now, works fine
in iPad.

--- a/style.css
+++ b/style.css
@@ -259,19 +259,6 @@ img {
 	line-height: 1.4;
 }
 
-@media (min-width: 42em) {
-	.header,
-	.hardfacts,
-	.speakers,
-	.sponsors,
-	.location__inner,
-	.schedule,
-	.footer__inner {
-		padding: 0;
-	}
-}
-
-
 /**
  * Theme
  */
